[gd_scene load_steps=5 format=3 uid="uid://b1w6pqli52hw5"]

[ext_resource type="Script" path="res://scripts/game/board_game.gd" id="1_t86uf"]
[ext_resource type="PackedScene" uid="uid://c7r71pseqwlp" path="res://scenes/game/dice_zone/dice_zone.tscn" id="2_dacpm"]
[ext_resource type="PackedScene" uid="uid://ckrnexaabuj" path="res://scenes/game/entities/boards/board_preview.tscn" id="3_pno53"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ay6mi"]
size = Vector3(1, 0.05, 1.5)

[node name="BoardGame" type="Node3D"]
script = ExtResource("1_t86uf")

[node name="DiceZoneP1" parent="." instance=ExtResource("2_dacpm")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.171973, 0, -0.0912124)

[node name="DiceZoneP2" parent="." instance=ExtResource("2_dacpm")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.171973, 0, -0.0912124)

[node name="BoardSpawn" type="Node3D" parent="."]

[node name="BoardPreview" parent="BoardSpawn" instance=ExtResource("3_pno53")]

[node name="Table" type="StaticBody3D" parent="." groups=["table"]]
metadata/_edit_group_ = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="Table"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0282786, 0)
shape = SubResource("BoxShape3D_ay6mi")
